# 1805_practice

./: .gitignore  .replit  main.py  main_common.py  nginx.conf  pyproject.toml  replit.nix  start.sh  кашин отчет
.agents/: agent_assets_metadata.toml
app2/: package-lock.json  package.json  server.js
attached_assets/: Pasted-pg-ctl-another-server-might-be-running-trying-to-start-_1779106015708.txt
data/: postgresql.conf  postmaster.opts  postmaster.pid
data/base/16384/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13466  13466_fsm  13466_vm  13470  13471  13471_fsm  13471_vm  13475  13476  13476_fsm  13476_vm  13480  13481  13481_fsm  13481_vm  13485  174  2187  2224  2228  2337  24576  24577  24581  24583  24584  (+189 more)
data/global/: 1262  2671  2672  pg_control  pg_internal.init
