[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "scikit-learn>=1.8.0",
    "waitress>=3.0.2",
    "yellowbrick>=1.5",
]
